# confluence_summarizer

./: README.md  pyproject.toml  secrets
confluence_summarizer/: README.md  __init__.py  pyproject.toml  setup.py
confluence_summarizer/confluence_summarizer/: __init__.py  cli.py  config.py  variables.yaml
confluence_summarizer/confluence_summarizer/agent/: base.py  summarizer.py
confluence_summarizer/confluence_summarizer/cli/: commands.py
confluence_summarizer/confluence_summarizer/config/: variables.yaml
confluence_summarizer/confluence_summarizer/core/: loader.py  persona.py
confluence_summarizer/examples/: README.md  example_usage.ipynb  example_usage.py
