[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "confluence-summarizer"
version = "0.1.0"
description = "A tool for summarizing Confluence documentation using different personas"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "atlassian-python-api>=3.41.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-core>=0.1.10",
    "langgraph>=0.0.20",
    "azure-identity>=1.15.0",
    "beautifulsoup4>=4.12.0",
    "rich>=13.7.0",
    "typer>=0.9.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0.1",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
confluence-summarizer = "confluence_summarizer.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["confluence_summarizer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=confluence_summarizer"

[tool.coverage.run]
source = ["confluence_summarizer"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "pass",
    "@abstractmethod",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
] 